--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,28 @@
-# Custom nav
-title: "Mint Forge"
-author: yiming
+title: John Smith
+description: My Personal Blog
+author: John Smith
+logo: /hcz-jekyll-blog/static/img/avatar.png
+github: https://github.com/codeasashu
+about: Freelance developer
 
-# Social media
-social:
-  GitHub: ""
-  Weibo: ""
-  Facebook: ""
-  Flickr: ""
-  Tumblr: ""
+baseurl: "https://codeasashu.github.io/hcz-jekyll-blog"
+url: "https://codeasashu.github.io/hcz-jekyll-blog"
 
-# Custom Copyright
-mail: kevinjobs@qq.com
-copyright: All rights reserved @Kevin JOBS
+allowsearch: true
 
-# sass plugin
-node_sass:
-  outputStyle: nested
-  precision: 5
-  sourceComments: false
+disqus_shortname: aboutashu
+google_analytics: UA-72862926-1
+
+share:
+  twitter_username: \#
+  fb_appid: 000000000000
+
+
+enableTags: true
+tagarray: []
+
+paginate: 20
+per_page: 20
+paginate_path: "/page:num/"
+markdown: kramdown
+gems: [jekyll-paginate, jekyll-gist]
