--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,15 @@
-title: John Smith
+title: He Wei
 description: My Personal Blog
 author: John Smith
-logo: /hcz-jekyll-blog/static/img/avatar.png
-github: https://github.com/codeasashu
-about: Freelance developer
+github: https://github.com/HW-hideonbush
+about: 
 
-baseurl: "https://codeasashu.github.io/hcz-jekyll-blog"
-url: "https://codeasashu.github.io/hcz-jekyll-blog"
+baseurl: "https://hw-hideonbush.github.io/"
+url: "https://hw-hideonbush.github.io/"
 
 allowsearch: true
 
 disqus_shortname: aboutashu
-google_analytics: UA-72862926-1
-
-share:
-  twitter_username: \#
-  fb_appid: 000000000000
-
 
 enableTags: true
 tagarray: []
